tests/models/enum/named/u8/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(lt = 2.0)]
        value: u8
    },
}
fn main() {}
